fixed gap between list and search in dropdown component

--- a/app/global.css
+++ b/app/global.css
@@ -187,6 +187,7 @@ a:hover {
 .select-menu,
 .select-menu ul {
   width: 300px;
+  
 }
 
 .selected {
@@ -201,10 +202,17 @@ a:hover {
 }
 
 .search-box {
+  background-color: var(--bg-color);
   border-right: var(--grey-border);
   border-left: var(--grey-border);
   border-top: var(--grey-border);
-  padding: 5px;
+  padding: 5px 5px 0 5px;
+  width: 300px;
+  height: 100%;
+}
+
+.dropdown {
+  position: absolute;
 }
 
 .select-menu ul {
